
- More accurate LIBOR calendars (thanks to Daniele de Francesco.)

- Added DKKLibor, EURLibor, NZDLibor.
